fix posts header height on mobile

--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -5,6 +5,18 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    max-height: 50vh;
+}
+
+.fullMedia {
+    max-height: 70vh;
+}
+
+@media (max-width: 500px) {
+    .header {
+        height: 70vh;
+        max-height: 70vh;
+    }
 }
 
 .children {
